add widt and long data plot demo

--- a/advanced_pandas.ipynb
+++ b/advanced_pandas.ipynb
@@ -8349,7 +8349,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# df.melt()\n",
+    "# df.pivot()"
+   ]
   }
  ],
  "metadata": {
