add pandas dataframe to excels demo

--- a/fundamentals.ipynb
+++ b/fundamentals.ipynb
@@ -4738,7 +4738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -5044,6 +5044,102 @@
    ],
    "source": [
     "dup_titles_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "small_df.to_excel('./data/small_df.xlsx')\n",
+    "small_df.to_excel('./data/small_df.xlsx', index=False)\n",
+    "small_df.to_excel('./data/small_df.xlsx', index=False,columns=['artist', 'title', 'year'])\n",
+    "\n",
+    "# multiple sheets\n",
+    "writer = pd.ExcelWriter('./data/multiple_sheets.xlsx', engine='xlsxwriter')\n",
+    "small_df.to_excel(writer, sheet_name='Preview', index=False)\n",
+    "df.to_excel(writer, sheet_name='Complete', index=False)\n",
+    "writer.save()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Turner, Joseph Mallord William    39389\n",
+       "Jones, George                      1046\n",
+       "Moore, Henry, OM, CH                623\n",
+       "Daniell, William                    612\n",
+       "Beuys, Joseph                       578\n",
+       "                                  ...  \n",
+       "Prout, Margaret Fisher                1\n",
+       "Hughes-Stanton, Blair                 1\n",
+       "Amorales, Carlos                      1\n",
+       "Fraenkel, Elsa                        1\n",
+       "Hancock, Charles                      1\n",
+       "Name: artist, Length: 3336, dtype: int64"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "artist_counts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# conditional formatting\n",
+    "\n",
+    "artist_counts = df['artist'].value_counts()\n",
+    "writer = pd.ExcelWriter('./data/colors.xlsx', engine='xlsxwriter')\n",
+    "artist_counts.to_excel(writer, sheet_name='Artist Counts')\n",
+    "sheet = writer.sheets['Artist Counts']\n",
+    "cells_range = 'B2:B{}'.format(len(artist_counts.index))\n",
+    "sheet.conditional_format(cells_range, {'type': '2_color_scale',\n",
+    "'min_value': '10',\n",
+    "'min_type': 'percentile',\n",
+    "'max_value': '99',\n",
+    "'max_type': 'percentile',\n",
+    "})\n",
+    "\n",
+    "writer.save()\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Series' object has no attribute 'columns'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-110-0cb739c70c32>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0martist_counts\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/anaconda3/envs/ml/lib/python3.8/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   5137\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_can_hold_identifiers_and_holds_name\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5138\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 5139\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   5140\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5141\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Series' object has no attribute 'columns'"
+     ]
+    }
+   ],
+   "source": [
+    "artist_counts.columns"
    ]
   },
   {
