add matplotlib demo

--- a/fundamentals.ipynb
+++ b/fundamentals.ipynb
@@ -5475,6 +5475,22 @@
     "# fig.savefig('plot.pdf', format='pdf', bbox_inches='tight', pad_inches=0.5, transparent=True)\n",
     "# fig.savefig('plot.pdf', format='pdf', bbox_inches='tight', pad_inches=0.5, transparent=True, dpi=300)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# books to learn\n",
+    "\n",
+    "+ Python for Data Analysis by Wes McKinney\n",
+    "+ Python Data Science Handbook by Jake VanderPlas\n",
+    "+ OPenintro Statistics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
